-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 26
-
Component/s: hotspot
-
b04
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8376710 | 26.0.2 | Jie Fu | P4 | Resolved | Fixed | master |
| JDK-8375517 | 25.0.3-oracle | Ivan Bereziuk | P4 | Resolved | Fixed | b02 |
| JDK-8376315 | 25.0.3 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8375518 | 21.0.11-oracle | Ivan Bereziuk | P4 | Resolved | Fixed | b02 |
| JDK-8376340 | 21.0.11 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8377505 | 17.0.20-oracle | Coleen Phillimore | P4 | Resolved | Fixed | master |
configure --with-debug-level=fastdebug --disable-precompiled-headers --with-jvm-features=-cds,-jfr
Symptom:
/usr/bin/ld: /data/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/systemDictionary.o: in function `SystemDictionary::add_nest_host_error(constantPoolHandle const&, int, stringStream const&)':
/data/jdk/src/hotspot/share/classfile/systemDictionary.cpp:1870:(.text+0x4241): undefined reference to `ConstantPool::resolved_klass_at(int) const'
collect2: error: ld returned 1 exit status
gmake[3]: *** [lib/CompileJvm.gmk:183: /data/jdk/build/linux-x86_64-server-fastdebug/support/modules_libs/java.base/server/libjvm.so] Error 1
gmake[2]: *** [make/Main.gmk:242: hotspot-server-libs] Error 2
- backported by
-
JDK-8375517 Missing include in systemDictionary.cpp after JDK-8365526
-
- Resolved
-
-
JDK-8375518 Missing include in systemDictionary.cpp after JDK-8365526
-
- Resolved
-
-
JDK-8376315 Missing include in systemDictionary.cpp after JDK-8365526
-
- Resolved
-
-
JDK-8376340 Missing include in systemDictionary.cpp after JDK-8365526
-
- Resolved
-
-
JDK-8376710 Missing include in systemDictionary.cpp after JDK-8365526
-
- Resolved
-
-
JDK-8377505 Missing include in systemDictionary.cpp after JDK-8365526
-
- Resolved
-
- caused by
-
JDK-8365526 Crash with null Symbol passed to SystemDictionary::resolve_or_null
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/a83e9d73
-
Commit(master)
openjdk/jdk25u-dev/38acdfad
-
Commit(master)
openjdk/jdk26u/e005c0e8
-
Commit(master)
openjdk/jdk/9715e6da
-
Review(jdk26)
openjdk/jdk/29406
-
Review(master)
openjdk/jdk21u-dev/2569
-
Review(master)
openjdk/jdk25u-dev/172
-
Review(master)
openjdk/jdk26u/28
-
Review(master)
openjdk/jdk/28946