8374178: Missing include in systemDictionary.cpp after JDK-8365526